[package]
name = "hermod"
description = "A rust futures-based RSS/Atom library"
license = "MIT"
version = "0.1.3"
readme = "README.md"
documentation = "https://docs.rs/hermod"
repository = "https://github.com/richardbrodie/hermod"
authors = ["Richard Brodie <richard@radagast.nu>"]

[dependencies]
atom_syndication = "^0.6"
chrono = { version = "^0.4.4", features = ["serde"] }
futures = "^0.1"
hyper = "^0.12.8"
hyper-tls = "^0.3.0"
log = "^0.4.0"
quick-xml = "^0.13.0"
rss = "^1.5.0"
serde = "^1.0.70"
serde_derive = "^1.0.70"
tokio-timer = "^0.2"
tokio-current-thread = "^0.1"
url = "^1.7.0"
